[project]
name = "asset-allocation"
version = "0.1.0"
description = "A tool for managing investment portfolio asset allocation"
authors = [{ name = "Matthew Dudys", email = "mattdudys@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "yfinance",
    "PyYAML",
]

[project.urls]
"Homepage" = "https://github.com/mattdudys/asset-allocation"

[project.optional-dependencies]
dev = ["pre-commit>=3.6.0", "ruff"]

[project.scripts]
asset-allocation = "asset_allocation.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
